# docs/openapi.yml
@@ -5,63 +5,19 @@ info:
   description: Emoine API
 
 paths:
-  '/oauth2/callback':
-    parameters:
-      - name: code
-        in: query
-        required: true
-        description: OAuth2.0のcode
-        schema:
-          type: string
-      - $ref: '#/components/parameters/sessions'
-
+  '/viewer':
     get:
+      operationId: getViewer
+      summary: 視聴者数を取得
       tags:
-        - oauth2
-      summary: OAuthのコールバック先
-      operationId: callback
-      responses:
-        '200':
-          description: OK
-        '302':
-          description: Found
-
-  '/oauth2/generate/code':
-    get:
-      tags:
-        - oauth2
-      summary: Code Challenge用Codeの生成
-      responses:
-        '200':
-          description: OK
-
-  '/users/me':
-    get:
-      operationId: getMe
-      summary: 自身のユーザー詳細情報を取得
-      tags:
-        - me
+        - viewer
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-
-  '/viewer':
-      get:
-        operationId: getViewer
-        summary: 自身のユーザー詳細情報を取得
-        tags:
-          - viewer
-        responses:
-          '200':
-            description: OK
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Viewer'
+                $ref: '#/components/schemas/Viewer'
 
   '/state':
     parameters:
@@ -106,7 +62,7 @@ paths:
         content:
           application/json:
             schema:
-                $ref: '#/components/schemas/LiveId'
+              $ref: '#/components/schemas/LiveId'
       responses:
         '200':
           description: Updated
@@ -140,6 +96,25 @@ paths:
       responses:
         '201':
           description: Created
+        '409':
+          description: Conflict
+
+  '/presentations/review':
+    put:
+      operationId: putPresentationReview
+      summary: プレゼンテーションのレビューを追加
+      tags:
+        - presentation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Review'
+      responses:
+        '201':
+          description: Created
+        '404':
+          description: Not Found
         '409':
           description: Conflict
 
@@ -235,40 +210,6 @@ paths:
         '404':
           description: Not Found
 
-    post:
-      operationId: postPresentationReview
-      summary: プレゼンテーションのレビューを追加
-      tags:
-        - presentation
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Review'
-      responses:
-        '201':
-          description: Created
-        '404':
-          description: Not Found
-        '409':
-          description: Conflict
-
-    patch:
-      operationId: editPresentationReview
-      summary: プレゼンテーションのレビューを変更
-      tags:
-        - presentation
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Review'
-      responses:
-        '200':
-          description: OK
-        '404':
-          description: Not Found
-
   '/presentations/{presentationId}/comments':
     parameters:
       - $ref: '#/components/parameters/presentationId'
@@ -289,26 +230,6 @@ paths:
                   $ref: '#/components/schemas/Comment'
         '404':
           description: Not Found
-
-  '/tokens':
-    post:
-      operationId: createToken
-      summary: アクセストークンの生成
-      description: アクセストークンの生成をします。生成したトークンの有効期限は1日です。
-      tags:
-        - token
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreateToken'
-      responses:
-        '201':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Token'
 
 components:
   parameters:
@@ -461,35 +382,9 @@ components:
         - yosa
         - kusa
     Review:
-      type: object
-      properties:
-        userId:
-          type: string
-          format: uuid
-          readOnly: true
-        skill:
-          type: number
-          minimum: 1
-          maximum: 5
-        artistry:
-          type: number
-          minimum: 1
-          maximum: 5
-        idea:
-          type: number
-          minimum: 1
-          maximum: 5
-        presentation:
-          type: number
-          minimum: 1
-          maximum: 5
-      required:
-        - userId
-        - skill
-        - artistry
-        - idea
-        - presentation
-      description: レビュー
+      type: array
+      items:
+        type: number
     ReviewStatistics:
       type: object
       properties:
@@ -497,29 +392,9 @@ components:
           type: number
         count:
           type: number
-        avgSkill:
-          type: number
-          minimum: 1
-          maximum: 5
-        avgArtistry:
-          type: number
-          minimum: 1
-          maximum: 5
-        avgIdea:
-          type: number
-          minimum: 1
-          maximum: 5
-        avgPresentation:
-          type: number
-          minimum: 1
-          maximum: 5
       required:
         - presentationId
         - count
-        - avgSkill
-        - avgArtistry
-        - avgIdea
-        - avgPresentation
       description: レビュー統計情報
     Comment:
       type: object
@@ -551,16 +426,3 @@ components:
     CreateToken:
       type: object
       properties: {}
-    Token:
-      type: object
-      properties:
-        token:
-          type: string
-      required:
-        - token
-  securitySchemes:
-    BearerAuth:
-      type: http
-      scheme: bearer
-security:
-  - BearerAuth: []
