# router/review.go
@@ -5,15 +5,7 @@ import (
 	"strconv"
 
 	"github.com/labstack/echo/v4"
-	"github.com/traPtitech/Emoine/repository"
 )
-
-type PostReviewStruct struct {
-	Skill        int `json:"skill" db:"skill"`
-	Artistry     int `json:"artistry" db:"artistry"`
-	Idea         int `json:"idea" db:"idea"`
-	Presentation int `json:"presentation" db:"presentation"`
-}
 
 // GetPresentationReview GET /presentations/:presentationID/review
 func (h *Handlers) GetPresentationReview(c echo.Context) error {
@@ -22,100 +14,46 @@ func (h *Handlers) GetPresentationReview(c echo.Context) error {
 		return c.NoContent(http.StatusBadRequest)
 	}
 
-	_, err = h.Repo.GetPresentation(presentationID)
+	_, err = h.repo.GetPresentation(presentationID)
 	if err != nil {
 		return c.NoContent(http.StatusNotFound)
 	}
 
-	res, err := h.Repo.GetReviewStatistics(presentationID)
+	res, err := h.repo.GetReviewStatistics(presentationID)
 	if err != nil {
 		return err
 	}
 	return c.JSON(http.StatusOK, res)
 }
 
-// PostPresentationReview POST /presentations/:presentationID/review
-func (h *Handlers) PostPresentationReview(c echo.Context) error {
-	presentationID, err := strconv.Atoi(c.Param("presentationID"))
+// PutPresentationReview PUT /presentations/review
+func (h *Handlers) PutPresentationReview(c echo.Context) error {
+	userID, err := getSession(c)
 	if err != nil {
-		return c.NoContent(http.StatusBadRequest)
+		return c.NoContent(http.StatusInternalServerError)
 	}
 
-	_, err = h.Repo.GetPresentation(presentationID)
-	if err != nil {
-		return c.NoContent(http.StatusNotFound)
-	}
-
-	posted := PostReviewStruct{}
+	posted := make([]int, 3)
 	if err := c.Bind(&posted); err != nil {
 		return c.NoContent(http.StatusBadRequest)
 	}
 
-	userID, err := getUserID(c)
-	if err != nil {
-		return c.JSON(http.StatusUnauthorized, err)
-	}
-	createReview := repository.Review{
-		UserId:         userID,
-		PresentationId: presentationID,
-		Score: repository.Score{
-			Skill:        posted.Skill,
-			Artistry:     posted.Artistry,
-			Idea:         posted.Idea,
-			Presentation: posted.Presentation,
-		},
+	for _, presentationID := range posted {
+		_, err := h.repo.GetPresentation(presentationID)
+		if err != nil {
+			return c.NoContent(http.StatusNotFound)
+		}
 	}
 
-	isExist, err := h.Repo.IsExistReview(userID, presentationID)
-	if err != nil {
-		return err
-	}
-	if isExist {
-		return c.NoContent(http.StatusConflict)
+	if err := h.repo.DeleteReview(userID.String()); err != nil {
+		return c.NoContent(http.StatusInternalServerError)
 	}
 
-	err = h.Repo.CreateReview(&createReview)
-	if err != nil {
-		return err
-	}
-	return c.JSON(http.StatusOK, createReview)
-}
-
-// PatchPresentationReview PATCH /presentations/:presentationID/review
-func (h *Handlers) PatchPresentationReview(c echo.Context) error {
-	presentationID, err := strconv.Atoi(c.Param("presentationID"))
-	if err != nil {
-		return c.NoContent(http.StatusBadRequest)
+	for _, presentationID := range posted {
+		if err := h.repo.CreateReview(userID.String(), presentationID); err != nil {
+			return c.NoContent(http.StatusInternalServerError)
+		}
 	}
 
-	_, err = h.Repo.GetPresentation(presentationID)
-	if err != nil {
-		return c.NoContent(http.StatusNotFound)
-	}
-
-	posted := PostReviewStruct{}
-	if err := c.Bind(&posted); err != nil {
-		return c.NoContent(http.StatusBadRequest)
-	}
-
-	userID, err := getUserID(c)
-	if err != nil {
-		return c.JSON(http.StatusUnauthorized, err)
-	}
-	updateReview := repository.Review{
-		UserId:         userID,
-		PresentationId: presentationID,
-		Score: repository.Score{
-			Skill:        posted.Skill,
-			Artistry:     posted.Artistry,
-			Idea:         posted.Idea,
-			Presentation: posted.Presentation,
-		},
-	}
-
-	err = h.Repo.UpdateReview(&updateReview)
-	if err != nil {
-		return err
-	}
 	return c.NoContent(http.StatusOK)
 }
